[tool.poetry]
name = "rt-predict"
version = "0.1.0"
description = "Prediction framework for perf traces"
authors = ["Mattia Nicolella <mattianicolella@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
