[tool.poetry]
name = "rt-predict"
version = "0.1.0"
description = "Prediction framework for perf traces"
authors = ["Mattia Nicolella <mattianicolella@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
ipykernel = "^6.9.2"
sklearn = "^0.0"
pyamg = "^4.2.2"
ipython = "^8.2.0"
tdqm = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
ipython = "^8.2.0"
jupyterlab = "^3.3.2"
build-backend = "poetry.core.masonry.api"
